--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <div class="first">
 <body>
-   <img src= "C:\Users\hussain reddy\Pictures\pic.jpg" align="right"height="100" width="100">
+   <img src= "pic.jpg" align="right"height="100" width="100">
 <h1>RESUME</h1>
    <h2>About me</h2>
 <li>Name:M.Sreeja</li>
